  single-line progress message as before.

* Ben Boeckel added the `--gnupghome` setting so that Obnam can be
  configured to use a separate GnuPG (gpg) configuration directory.

* Ian Campbell fixed a bug in the kdirstat plugin, improving the
  handling of unknown file types.

* Henri Sivonen improved the compression code to not compress if the
  result would be larger.

Version 1.17, released 2015-09-12
---------------------------------

* Lukáš Poláček added the `--fsck-skip-checksums` setting to
  greatly speed up `obnam fsck`.

* Lars Wirzenius fixed a bug that caused Obnam to sometimes back up
  the parent of the backup live data root. In other words, if running
  `obnam backup $HOME/important`, then Obnam might backup the whole
  of the home directory, instead of just the important subdirectory.


Version 1.16, released 2015-09-06
---------------------------------

* Fixed another typo in a variable name ("netloc"), found by Benedikt
  Neuffer.

* Fixed a lot of missing module imports, unnecessary module imports,
  and other minor bugs and style issues found by pylint. Pylint now
  gets run automatically by the test suite.

  This includes a fix in `exclude_pathnames_plugin.py` to add a missing
  import and fix variable namaes, by Diane Trout. A similar fix was
  also contributed by Mesar Hameed.

* Lukáš Poláček fixed an unlocking problem when GnuPG fails during an
  Obnam run. The lock should now be removed rather than left behind.

Version 1.15, released 2015-08-19
---------------------------------

* Fixed a typo in a variable name ("netloc"), found by Dirk.

Version 1.14, released 2015-08-14
---------------------------------

Bug fixes:

* Since 1.9, Obnam has had trouble with sftp URLs for backup roots,
  particularly for URLs specifying the server's root directory. Dennis
  Jacobfeuerborn found the reason: the backup plugin was treating URLs
  as filenames. This should now be fixed.

Version 1.13, released 2015-08-01
---------------------------------
